Scenario abortion
- added new scenario status `aborted`
- added endpoint `PUT /api/scenarios/:scenarioId/abort`. Scenario can be aborted until it is finished (`completed` or `failed`)
- updated openapi schema
